tests/out/error/other/unnecessary_prefix.in.bt
package mypkg

const FOO := 1

fun x() {
	_ := mypkg.FOO
}
